# openrelik-workers

./: .gitignore  README.md
.devcontainer/: devcontainer.json
.github/: repos-log2timeline-staging.yaml  repos-poetry.yaml  repos-uv.yaml
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_report.yaml
.github/workflows/: docker-image-build-log2timeline-staging.yaml  docker-image-build-release.yaml  docker-image-build.yaml  label-issues.yaml  python-test-poetry.yaml  python-test-uv.yaml  update-uv-and-run-tests.yaml  update-uv-workers.yaml
openrelik-worker-yara/: Dockerfile  Dockerfile.fraken
openrelik-worker-yara/fraken-x/src/: main.rs  walk.rs
openrelik-worker-yara/src/: app.py  tasks.py
openrelik-worker-yara/tests/: test_tasks.py
workers/openrelik-worker-analyzer-config/: Dockerfile  README.md  openrelik.yaml  pyproject.toml
workers/openrelik-worker-analyzer-config/src/: app.py  factory.py  jenkins_task.py  jupyter_task.py  llm_task.py  redis_task.py  sshd_task.py  tomcat_task.py
workers/openrelik-worker-analyzer-config/src/analyzers/: jenkins_analyzer.py  jupyter_analyzer.py  llm_analyzer.py  redis_analyzer.py  sshd_analyzer.py  tomcat_analyzer.py  utils.py
workers/openrelik-worker-analyzer-config/tests/: test_jenkins_analyzer.py  test_jupyter_analyzer.py  test_redis_analyzer.py  test_sshd_analyzer.py  test_tomcat_analyzer.py
workers/openrelik-worker-analyzer-logs/: Dockerfile  README.md  pyproject.toml
workers/openrelik-worker-analyzer-logs/src/: analyzer_output.py  app.py  auth_log_analyzer.py  logger.py  ssh_analyzer.py  tasks.py
workers/openrelik-worker-analyzer-logs/tests/: test_tasks.py
workers/openrelik-worker-capa/: Dockerfile  README.md  openrelik.yaml  pyproject.toml
workers/openrelik-worker-capa/src/: tasks.py
workers/openrelik-worker-containers/: Dockerfile  README.md  pyproject.toml  setup.sh
workers/openrelik-worker-containers/src/: app.py  container_drift.py  container_export.py  container_file_extract.py  container_list.py  container_task.template  utils.py
workers/openrelik-worker-containers/src/openrelik_worker_common/: mount_utils.py  task_utils.py
workers/openrelik-worker-containers/test_data/: container_list.json  containerd_list.json  docker_drift.json  docker_list.json
workers/openrelik-worker-containers/tests/: test_container_drift.py  test_container_export.py  test_container_file_extract.py  test_container_list.py  test_utils.py
workers/openrelik-worker-floss/: Dockerfile  README.md  openrelik.yaml  pyproject.toml
workers/openrelik-worker-floss/src/: app.py  tasks.py
workers/openrelik-worker-floss/tests/: test_tasks.py
workers/openrelik-worker-yara/: README.md  pyproject.toml
workers/openrelik-worker-yara/fraken-x/: Cargo.toml
workers/openrelik-worker-yara/fraken-x/src/: lib.rs  magic.rs  userid.rs
