[project]
name = "openrelik-worker-template"
version = "2026.01.14"
description = "SSH login analyzer"
authors = [{ name = "Slobodan Popović", email = "spop@google.com" }]
requires-python = ">=3.11,<4.0"
readme = "README.md"
dependencies = [
    "celery[redis]>=5.4.0,<6",
    "openrelik-worker-common>=0.17.1",
    "pandas>=2.2.3,<3",
    "pyparsing>=3.2.0,<4",
    "debugpy>=1.8.7,<2",
    "openrelik-common>=0.7.0",
]

[dependency-groups]
test = [
    "fakeredis>=2.32.0,<3",
    "pytest>=7.4,<8",
    "pytest-cov",
]

[tool.uv]
default-groups = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["tests.py", "test_*.py"]
pythonpath = [".", "src"]
