[project]
name = "openrelik-worker-containers"
version = "2026.01.14"
description = "container explorer"
authors = [{ name = "roshan maskey", email = "roshanmaskey@gmail.com" }]
requires-python = ">=3.11,<4.0"
readme = "README.md"
license = "Apache 2.0"
dependencies = [
    "celery[redis]>=5.4.0,<6",
    "openrelik-worker-common>=0.17.1,<1.0.0",
    "openrelik-common>=0.7.0,<1.0.0",
]

[dependency-groups]
test = [
    "pytest",
    "pytest-cov>=5.0.0,<6",
    "fakeredis[lua]>=2.28.1,<3",
]

[tool.uv]
default-groups = []

