[project]
name = "openrelik-worker-yara"
version = "0.1.0"
description = "Scan a local directory using Fraken-X"
authors = [
    { name = "Thomas Chopitea", email = "tomchop@gmail.com" },
    { name = "Fry", email = "fryx0r@gmail.com" },
]
requires-python = ">=3.11,<4.0"
readme = "README.md"
dependencies = [
    "celery[redis]>=5.4.0,<6",
    "openrelik-worker-common>=0.17.1,<1.0.0",
    "openrelik-common>=0.7.0,<1.0.0",
]

[dependency-groups]
test = [
    "pytest",
    "pytest-cov>=5.0.0,<6",
    "pytest-mock>=3.14.0,<4",
]

[tool.uv]
package = false
default-groups = ["test"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
