[package]
name = "fraken-x"
version = "0.1.0"
edition = "2021"

[features]
logging = ["dep:log", "dep:env_logger"]

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.27", features = ["derive"] }
crossbeam = "0.8.4"
crossterm = "0.28.1"
env_logger = { version = "0.11.3", optional = true, features = ["auto-color"] }
globwalk = "0.9.1"
log = { version = "0.4.22", optional = true }
serde = "1.0.215"
serde_json = "1.0.133"
sha256 = "1.5.0"
superconsole = "0.2.0"
yansi = "1.0.1"
yara-x = { version = "0.11", features = ["logging", "parallel-compilation"] }
